// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker DatePicker date 1`] = `
<DatePicker
  cancelText="取消"
  defaultValue=""
  disabled={false}
  displayMember="label"
  locale={
    Object {
      "day": "日",
      "hour": "时",
      "minute": "分",
      "month": "月",
      "year": "年",
    }
  }
  minuteStep={1}
  mode="date"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择日期"
  prefixCls="za-picker"
  title="选择日期"
  value="2017-09-06"
  valueMember="value"
  visible={false}
>
  <div
    className="za-picker"
    onClick={[Function]}
  >
    <div
      className="za-picker-input"
    >
      <input
        type="hidden"
        value="2017-09-06"
      />
      2017-09-06
    </div>
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  选择日期
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <ColumnGroup
                    disabled={false}
                    displayMember="label"
                    itemRender={[Function]}
                    onValueChange={[Function]}
                    prefixCls="za-picker"
                    selectedValue={
                      Array [
                        "2017",
                        "8",
                        "6",
                      ]
                    }
                    valueMember="value"
                  >
                    <div
                      className="za-picker-column-group"
                    >
                      <div
                        className="za-picker-column-group-item"
                        key="year"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="2017"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item"
                                key="2000"
                              >
                                2000年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2001"
                              >
                                2001年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2002"
                              >
                                2002年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2003"
                              >
                                2003年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2004"
                              >
                                2004年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2005"
                              >
                                2005年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2006"
                              >
                                2006年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2007"
                              >
                                2007年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2008"
                              >
                                2008年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2009"
                              >
                                2009年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2010"
                              >
                                2010年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2011"
                              >
                                2011年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2012"
                              >
                                2012年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2013"
                              >
                                2013年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2014"
                              >
                                2014年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2015"
                              >
                                2015年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2016"
                              >
                                2016年
                              </div>
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="2017"
                              >
                                2017年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2018"
                              >
                                2018年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2019"
                              >
                                2019年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2020"
                              >
                                2020年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2021"
                              >
                                2021年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2022"
                              >
                                2022年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2023"
                              >
                                2023年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2024"
                              >
                                2024年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2025"
                              >
                                2025年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2026"
                              >
                                2026年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2027"
                              >
                                2027年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2028"
                              >
                                2028年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2029"
                              >
                                2029年
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2030"
                              >
                                2030年
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="month"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="8"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item"
                                key="0"
                              >
                                1月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="1"
                              >
                                2月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2"
                              >
                                3月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="3"
                              >
                                4月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="4"
                              >
                                5月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="5"
                              >
                                6月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="6"
                              >
                                7月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="7"
                              >
                                8月
                              </div>
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="8"
                              >
                                9月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="9"
                              >
                                10月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="10"
                              >
                                11月
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="11"
                              >
                                12月
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="day"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="6"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item"
                                key="1"
                              >
                                1日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2"
                              >
                                2日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="3"
                              >
                                3日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="4"
                              >
                                4日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="5"
                              >
                                5日
                              </div>
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="6"
                              >
                                6日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="7"
                              >
                                7日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="8"
                              >
                                8日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="9"
                              >
                                9日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="10"
                              >
                                10日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="11"
                              >
                                11日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="12"
                              >
                                12日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="13"
                              >
                                13日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="14"
                              >
                                14日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="15"
                              >
                                15日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="16"
                              >
                                16日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="17"
                              >
                                17日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="18"
                              >
                                18日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="19"
                              >
                                19日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="20"
                              >
                                20日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="21"
                              >
                                21日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="22"
                              >
                                22日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="23"
                              >
                                23日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="24"
                              >
                                24日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="25"
                              >
                                25日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="26"
                              >
                                26日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="27"
                              >
                                27日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="28"
                              >
                                28日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="29"
                              >
                                29日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="30"
                              >
                                30日
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                    </div>
                  </ColumnGroup>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className="fade-leave"
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</DatePicker>
`;

exports[`DatePicker DatePicker datetime 1`] = `
<DatePicker
  cancelText="取消"
  defaultValue="2017-11-03 15:00"
  disabled={false}
  displayMember="label"
  locale={
    Object {
      "day": "日",
      "hour": "时",
      "minute": "分",
      "month": "月",
      "year": "年",
    }
  }
  max="2017-11-12 14:00"
  min="2017-11-02 11:00"
  minuteStep={1}
  mode="datetime"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择时间"
  prefixCls="za-picker"
  title="选择时间"
  value=""
  valueMember="value"
  visible={false}
>
  <div
    className="za-picker"
    onClick={[Function]}
  >
    <div
      className="za-picker-input"
    >
      <input
        type="hidden"
        value="2017-11-03 15:00"
      />
      2017-11-03 15:00
    </div>
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  选择时间
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <ColumnGroup
                    disabled={false}
                    displayMember="label"
                    itemRender={[Function]}
                    onValueChange={[Function]}
                    prefixCls="za-picker"
                    selectedValue={
                      Array [
                        "2017",
                        "10",
                        "3",
                        "15",
                        "0",
                      ]
                    }
                    valueMember="value"
                  >
                    <div
                      className="za-picker-column-group"
                    >
                      <div
                        className="za-picker-column-group-item"
                        key="year"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="2017"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="2017"
                              >
                                2017年
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="month"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="10"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="10"
                              >
                                11月
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="day"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="3"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item"
                                key="2"
                              >
                                2日
                              </div>
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="3"
                              >
                                3日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="4"
                              >
                                4日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="5"
                              >
                                5日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="6"
                              >
                                6日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="7"
                              >
                                7日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="8"
                              >
                                8日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="9"
                              >
                                9日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="10"
                              >
                                10日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="11"
                              >
                                11日
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="12"
                              >
                                12日
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="hours"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="15"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item"
                                key="0"
                              >
                                0时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="1"
                              >
                                1时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2"
                              >
                                2时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="3"
                              >
                                3时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="4"
                              >
                                4时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="5"
                              >
                                5时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="6"
                              >
                                6时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="7"
                              >
                                7时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="8"
                              >
                                8时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="9"
                              >
                                9时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="10"
                              >
                                10时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="11"
                              >
                                11时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="12"
                              >
                                12时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="13"
                              >
                                13时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="14"
                              >
                                14时
                              </div>
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="15"
                              >
                                15时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="16"
                              >
                                16时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="17"
                              >
                                17时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="18"
                              >
                                18时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="19"
                              >
                                19时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="20"
                              >
                                20时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="21"
                              >
                                21时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="22"
                              >
                                22时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="23"
                              >
                                23时
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="minutes"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="0"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="0"
                              >
                                0分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="1"
                              >
                                1分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2"
                              >
                                2分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="3"
                              >
                                3分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="4"
                              >
                                4分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="5"
                              >
                                5分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="6"
                              >
                                6分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="7"
                              >
                                7分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="8"
                              >
                                8分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="9"
                              >
                                9分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="10"
                              >
                                10分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="11"
                              >
                                11分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="12"
                              >
                                12分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="13"
                              >
                                13分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="14"
                              >
                                14分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="15"
                              >
                                15分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="16"
                              >
                                16分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="17"
                              >
                                17分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="18"
                              >
                                18分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="19"
                              >
                                19分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="20"
                              >
                                20分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="21"
                              >
                                21分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="22"
                              >
                                22分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="23"
                              >
                                23分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="24"
                              >
                                24分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="25"
                              >
                                25分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="26"
                              >
                                26分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="27"
                              >
                                27分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="28"
                              >
                                28分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="29"
                              >
                                29分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="30"
                              >
                                30分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="31"
                              >
                                31分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="32"
                              >
                                32分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="33"
                              >
                                33分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="34"
                              >
                                34分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="35"
                              >
                                35分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="36"
                              >
                                36分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="37"
                              >
                                37分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="38"
                              >
                                38分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="39"
                              >
                                39分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="40"
                              >
                                40分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="41"
                              >
                                41分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="42"
                              >
                                42分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="43"
                              >
                                43分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="44"
                              >
                                44分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="45"
                              >
                                45分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="46"
                              >
                                46分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="47"
                              >
                                47分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="48"
                              >
                                48分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="49"
                              >
                                49分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="50"
                              >
                                50分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="51"
                              >
                                51分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="52"
                              >
                                52分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="53"
                              >
                                53分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="54"
                              >
                                54分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="55"
                              >
                                55分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="56"
                              >
                                56分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="57"
                              >
                                57分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="58"
                              >
                                58分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="59"
                              >
                                59分
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                    </div>
                  </ColumnGroup>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</DatePicker>
`;

exports[`DatePicker DatePicker month 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-input za-picker-placeholder"
  >
    <input
      type="hidden"
      value=""
    />
    请选择年份
  </div>
  <div
    class="za-picker-container za-picker-hidden"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              选择年份
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-column-group"
              >
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-column"
                  >
                    <div
                      class="za-picker-column-indicator"
                    />
                    <div
                      class="za-picker-column-content"
                    >
                      <div
                        class="za-picker-column-item"
                      >
                        2000年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2001年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2002年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2003年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2004年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2005年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2006年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2007年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2008年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2009年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2010年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2011年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2012年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2013年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2014年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2015年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2016年
                      </div>
                      <div
                        class="za-picker-column-item za-picker-column-item-selected"
                      >
                        2017年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2018年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2019年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2020年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2021年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2022年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2023年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2024年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2025年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2026年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2027年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2028年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2029年
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2030年
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-column"
                  >
                    <div
                      class="za-picker-column-indicator"
                    />
                    <div
                      class="za-picker-column-content"
                    >
                      <div
                        class="za-picker-column-item"
                      >
                        1月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        3月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        4月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        5月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        6月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        7月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        8月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        9月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        10月
                      </div>
                      <div
                        class="za-picker-column-item za-picker-column-item-selected"
                      >
                        11月
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        12月
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker time 1`] = `
<DatePicker
  cancelText="取消"
  defaultValue="2017-11-03 15:00"
  disabled={false}
  displayMember="label"
  locale={
    Object {
      "day": "日",
      "hour": "时",
      "minute": "分",
      "month": "月",
      "year": "年",
    }
  }
  minuteStep={15}
  mode="time"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择时间"
  prefixCls="za-picker"
  title="选择时间"
  value=""
  valueMember="value"
  visible={false}
>
  <div
    className="za-picker"
    onClick={[Function]}
  >
    <div
      className="za-picker-input"
    >
      <input
        type="hidden"
        value="15:00"
      />
      15:00
    </div>
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  选择时间
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <ColumnGroup
                    disabled={false}
                    displayMember="label"
                    itemRender={[Function]}
                    onValueChange={[Function]}
                    prefixCls="za-picker"
                    selectedValue={
                      Array [
                        "15",
                        "0",
                      ]
                    }
                    valueMember="value"
                  >
                    <div
                      className="za-picker-column-group"
                    >
                      <div
                        className="za-picker-column-group-item"
                        key="hours"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="15"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item"
                                key="0"
                              >
                                0时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="1"
                              >
                                1时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="2"
                              >
                                2时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="3"
                              >
                                3时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="4"
                              >
                                4时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="5"
                              >
                                5时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="6"
                              >
                                6时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="7"
                              >
                                7时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="8"
                              >
                                8时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="9"
                              >
                                9时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="10"
                              >
                                10时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="11"
                              >
                                11时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="12"
                              >
                                12时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="13"
                              >
                                13时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="14"
                              >
                                14时
                              </div>
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="15"
                              >
                                15时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="16"
                              >
                                16时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="17"
                              >
                                17时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="18"
                              >
                                18时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="19"
                              >
                                19时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="20"
                              >
                                20时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="21"
                              >
                                21时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="22"
                              >
                                22时
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="23"
                              >
                                23时
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="minutes"
                      >
                        <Column
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          selectedValue="0"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-column"
                          >
                            <div
                              className="za-picker-column-indicator"
                            />
                            <div
                              className="za-picker-column-content"
                            >
                              <div
                                className="za-picker-column-item za-picker-column-item-selected"
                                key="0"
                              >
                                0分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="15"
                              >
                                15分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="30"
                              >
                                30分
                              </div>
                              <div
                                className="za-picker-column-item"
                                key="45"
                              >
                                45分
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                    </div>
                  </ColumnGroup>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</DatePicker>
`;

exports[`DatePicker DatePicker year 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-input"
  >
    <input
      type="hidden"
      value="2017年"
    />
    2017年
  </div>
  <div
    class="za-picker-container za-picker-hidden"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              选择年份
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-column-group"
              >
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-column"
                  >
                    <div
                      class="za-picker-column-indicator"
                    />
                    <div
                      class="za-picker-column-content"
                    >
                      <div
                        class="za-picker-column-item"
                      >
                        2000
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2001
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2002
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2003
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2004
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2005
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2006
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2007
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2008
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2009
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2010
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2011
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2012
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2013
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2014
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2015
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2016
                      </div>
                      <div
                        class="za-picker-column-item za-picker-column-item-selected"
                      >
                        2017
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2018
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2019
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2020
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2021
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2022
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2023
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2024
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2025
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2026
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2027
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2028
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2029
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        2030
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
